Fix SMS logs rates and reports
